# rust-zero-backend

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yaml  general.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221021235721_create_subscriptions_table.sql  20230101175317_add_status_to_subscriptions.sql  20230101180057_make_status_not_null_in_subscriptions.sql  20230101180356_create_subscription_tokens_table.sql  20230110235621_create_users_table.sql  20230112225922_add_salt_to_users.sql  20230112234551_remove_salt_from_users.sql  20230116201222_seed_user.sql  20230219195229_create_newsletter_issues_table.sql  20230219195646_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
